introduced scoring mechanism
now the score for each food is being counted and shown

--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
   <body onload="main()">
     <h1>Snake Game</h1>
     <div id="grid"></div>
+    <div id="scoreBoard">
+      <p id="score"></p>
+    </div>
   </body>
 </html>
