--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <h1>Snake Game</h1>
     <div id="grid"></div>
     <div id="scoreBoard">
-      <p id="score"></p>
+      <h4>SCORE:&nbsp</h4>
+      <h2 id="score"></h2>
     </div>
   </body>
 </html>
