--- a/index.html
+++ b/index.html
@@ -11,11 +11,15 @@
     <script src="./gameControl.js"></script>
   </head>
   <body onload="main()">
-    <h1>Snake Game</h1>
-    <div id="grid"></div>
-    <div id="scoreBoard">
-      <h4>SCORE:&nbsp</h4>
-      <h2 id="score"></h2>
+    <div id="container">
+      <div id="header">
+        <h1>Snake Game</h1>
+        <div id="scoreBoard">
+          <h4>SCORE:&nbsp;&nbsp;</h4>
+          <h2 id="score"></h2>
+        </div>
+      </div>
+      <div id="grid"></div>
     </div>
   </body>
 </html>
