--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <script src="./food.js"></script>
     <script src="./snake.js"></script>
     <script src="./game.js"></script>
-    <script src="./gameControl.js"></script>
+    <script src="./main.js"></script>
   </head>
-  <body onload="main()">
+  <body>
     <div id="container">
       <div id="header">
         <h1>Snake Game</h1>
