--- a/index.html
+++ b/index.html
@@ -21,5 +21,8 @@
       </div>
       <div id="grid"></div>
     </div>
+    <div id="buttonContainer">
+      <button id="leftButton">Left</button><button id="rightButton">Right</button>
+    </div>
   </body>
 </html>
