--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div id="grid"></div>
     </div>
     <div id="buttonContainer">
-      <button id="leftButton">Left</button><button id="rightButton">Right</button>
+      <div id="leftButton">Left</div><div id="rightButton">Right</div>
     </div>
   </body>
 </html>
