--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="viewport" content="width=device-width">
     <title>Snake</title>
     <link rel="stylesheet" href="snake.css" />
     <script src="./direction.js"></script>
@@ -22,7 +23,7 @@
       <div id="grid"></div>
     </div>
     <div id="buttonContainer">
-      <div id="leftButton">Left</div><div id="rightButton">Right</div>
+      <button id="leftButton">Left</button><button id="rightButton">Right</button>
     </div>
   </body>
 </html>
