--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="viewport" content="width=device-width">
     <title>Snake</title>
     <link rel="stylesheet" href="snake.css" />
     <script src="./direction.js"></script>
